Heroku preparation
